fixed the alignment of contact icon at footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -137,8 +137,6 @@
 }
 
 .cont-icon {
-  font-size: 17px;
-  padding-left: 2px;
   color: #ff725e;
   transition: all 0.3s ease-in;
 }
